--- a/sass/components/photographer-banner.scss
+++ b/sass/components/photographer-banner.scss
@@ -6,8 +6,9 @@
     background: rgb(250, 250, 250);
     padding: 30px;
     &__info{
-        height: 120px;
-       /*  background-color: blue; */
+        /* background-color: blue; */
+        min-height: 120px;
+        min-width: 200px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -25,20 +26,35 @@
             font-size: 10px;
             color: $tertiary;
         }
+        &-labels{
+            display: flex;
+            flex-wrap: wrap;
+        }
     }
     &__img{
         display: flex;
         align-items: center;
         justify-content: center;
+        border-radius: 50%;
         img{
             width: auto;
-            height: 120px;
+            height: 80px;
             border-radius: 50%;
             border: 1px solid black;
         }
     }
 }
-@media screen and (max-width: $breakPointMobile) {
+ @media screen and (max-width: $breakPointMobile) {
+    .photographerBanner{
+        background: none;
+        &__info{
+            &-name{
+                button{
+                    display:none;
+                }
+            }
+        }
+    }
     .photographerBanner__info-name{
         button{
             position: absolute;
@@ -52,4 +68,4 @@
         }
     }
 
-  }
+  } 
