--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./components/photographer.scss";
 @import "./components/photographer-banner.scss";
 @import "./components/picture.scss";
+@import "./components/modal.scss";
 /* Pages */
 @import "./pages/photographers.scss";
 @import "./pages/photgrapher.scss";
