--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -18,7 +18,16 @@
     color: black;
   }
 }
-
+.btnStickyTop {
+  //TODO - JS: display when scroll 
+  display: block;
+  position: sticky;
+  top :0;
+  button{
+    background: $secondary;
+    padding: 5px;
+  }
+}
 .btnLabel {
   background: none;
   border-radius: $borderRadiusBtnLabel;
@@ -26,6 +35,7 @@
   padding: 2px 8px;
   color: $primary;
   font-size: 10px;
+  margin: 3px;
   cursor: pointer;
   &:hover {
     background: $primary;
