--- a/sass/components/photographer.scss
+++ b/sass/components/photographer.scss
@@ -1,49 +1,55 @@
- @import '../utils/variables';
+@import "../utils/variables";
 
- .photographer{
-    width: 30vw;
-    min-width: 300px;
-    margin: 5px;
-    &__img{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        img{
-            width: auto;
-            height: 120px;
-            border-radius: 50%;
-            border: 1px solid black;
-        }
+.photographer {
+  /* background: chocolate; */
+  width: 28vw;
+  margin: 5px;
+  .link {
+    text-decoration: none;
+  }
+  &__img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: auto;
+      height: 120px;
+      border-radius: 50%;
+      border: 1px solid black;
     }
-    &__info{
-        width: 100%;
-    /*     background-color: blue; */
-        min-height: 110px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        &-name{
-            /* background-color: red; */
-            width: 300px;
-            font-size: 25px;
-            color: $secondary;
-        }
-        &-country{
-            font-size: 12px;
-            color: $primary;
-        }
-        &-tagline{
-            font-size: 10px;
-        }
-        &-price{
-            color: $tertiary;
-            font-size: 8px;
-        }
-        &-labels{
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
+  }
+  &__info {
+ /*    background-color: rebeccapurple; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    align-items: center;
+    &-name {
+    /*   background-color: red; */
+      font-size: 25px;
+      color: $secondary;
     }
- }
+    &-country {
+      font-size: 12px;
+      color: $primary;
+    }
+    &-tagline {
+      font-size: 10px;
+    }
+    &-price {
+      color: $tertiary;
+      font-size: 8px;
+    }
+    &-labels {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  }
+}
+@media screen and (max-width: $breakPointMobile) {
+    .photographer{
+      margin: 15px;
+      width: 100%; 
+    }
+  }
