--- a/sass/pages/photographers.scss
+++ b/sass/pages/photographers.scss
@@ -5,14 +5,6 @@
     min-height: 94vh;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;  
+    justify-content: space-between;
+   
 } 
-
-@media screen and (max-width:$breakPointMobile) {
-    .photographers{
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-    }
-  }
