--- a/sass/components/modal.scss
+++ b/sass/components/modal.scss
@@ -1,34 +1,63 @@
 @import "../utils/variables";
 
-.bgGround{
-    /* display: none; */
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-    background-color: rgba(236, 236, 236, 0.4);
-    .modal{
-        background-color: chocolate;
-        position: relative;
-        position: absolute;
-        z-index: 4;
-        left: 0;
-        top: 0;
-        height: 50%;
-        width: 50%;
-        overflow: auto;
-        margin: 5% auto;
-        max-width: 500px;
-        animation-name: modalopen;
-        animation-duration: var(--modal-duration);
-        background: #232323;
-        border-radius: 10px;
-        overflow: hidden;
-        position: relative;
-        color: #fff;
-        padding-top: 10px;
+.bgGround {
+  display: none;
+  position: fixed;
+  z-index: 5;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(236, 236, 236, 0.4);
+  .modal {
+    position: absolute;
+    z-index: 6;
+    background: $secondary;
+    border-radius: 4px;
+    min-width: 300px;
+    width: 30vw;
+    /* height: 500px; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    &__close {
+      font-size: 30px;
+      color: white;
+      position: absolute;
+      right:20px;
+      top: 20px;
+      cursor: pointer;
     }
+    &__content {
+      &-form {
+        padding: 20px;
+        h2{
+            font-size: 30px;
+        }
+        .formContact {
+          &__item {
+            display: flex;
+            flex-direction: column;
+            label{
+                font-size: 20px;
+            }
+            input {
+              height: 35px;
+              border-radius: 4px;
+              border: none;
+            }
+            textarea {
+              border-radius: 4px;
+              border: none;
+            }
+          }
+          &__btn{
+              button{
+                  padding: 14px 18px;
+              }
+          }
+        }
+      }
+    }
+  }
 }
