--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,9 @@
   color: #901c1c;
   height: 5vh;
 }
+.topBar__brand img {
+  width: 180px;
+}
 .topBar__items ul {
   display: flex;
 }
@@ -313,7 +316,7 @@
 .photographerBanner__info-name {
   display: flex;
   align-items: center;
-  font-size: 30px;
+  font-size: 20px;
   color: #D3573C;
 }
 .photographerBanner__info-country {
@@ -345,6 +348,9 @@
   .photographerBanner {
     background: none;
   }
+  .photographerBanner__info-name {
+    font-size: 15px;
+  }
   .photographerBanner__info-name button {
     display: none;
   }
@@ -365,6 +371,9 @@
 /* BTN */
 /* BTN LABEL */
 /* BREAKPOINT */
+.picture__img {
+  cursor: pointer;
+}
 .picture__img img {
   width: 28vw;
   border-radius: 4px;
@@ -412,25 +421,29 @@
 .bgGround .modal {
   position: absolute;
   z-index: 6;
-  background: #D3573C;
   border-radius: 4px;
   min-width: 300px;
-  width: 30vw;
-  /* height: 500px; */
+  width: 40vw;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 .bgGround .modal__close {
   font-size: 30px;
-  color: white;
   position: absolute;
   right: 20px;
   top: 20px;
   cursor: pointer;
 }
+.bgGround .modal .contact {
+  color: white;
+}
+.bgGround .modal .pictures {
+  color: #901c1c;
+}
 .bgGround .modal__content-form {
   padding: 20px;
+  background: #D3573C;
 }
 .bgGround .modal__content-form h2 {
   font-size: 30px;
@@ -453,6 +466,25 @@
 }
 .bgGround .modal__content-form .formContact__btn button {
   padding: 14px 18px;
+}
+.bgGround .modal__content-picture {
+  padding: 20px;
+  background: white;
+}
+.bgGround .modal__content-picture .carouselPictures {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bgGround .modal__content-picture .carouselPictures__chevron {
+  color: #901c1c;
+  font-size: 25px;
+  cursor: pointer;
+  margin: 20px;
+}
+.bgGround .modal__content-picture .carouselPictures__pictures img {
+  min-width: 200px;
+  width: 30vw;
 }
 
 /* Pages */
@@ -480,6 +512,9 @@
 }
 .containerPhotographerSelected__brand {
   margin: 10px 0;
+}
+.containerPhotographerSelected__brand img {
+  width: 180px;
 }
 .containerPhotographerSelected__sort {
   padding: 10px 0;
