--- a/css/style.css
+++ b/css/style.css
@@ -241,51 +241,56 @@
 /* BTN LABEL */
 /* BREAKPOINT */
 .photographer {
-  /* background: chocolate; */
   width: 28vw;
   margin: 5px;
 }
-.photographer .link {
+.photographer__header {
+  text-align: center;
+}
+.photographer__header a {
   text-decoration: none;
 }
-.photographer__img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.photographer__img img {
+.photographer__header img {
   width: auto;
   height: 120px;
   border-radius: 50%;
   border: 1px solid black;
 }
-.photographer__info {
-  /*    background-color: rebeccapurple; */
-  display: flex;
-  flex-direction: column;
-  /* justify-content: space-between; */
-  align-items: center;
-}
-.photographer__info-name {
-  /*   background-color: red; */
+.photographer__header h2 {
   font-size: 25px;
   color: #D3573C;
 }
-.photographer__info-country {
+.photographer__main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 50px;
+}
+.photographer__main .location {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   font-size: 12px;
   color: #901c1c;
 }
-.photographer__info-tagline {
+.photographer__main .location__city {
+  margin-right: 5px;
+}
+.photographer__main .tagline {
   font-size: 10px;
 }
-.photographer__info-price {
+.photographer__main .price {
   color: #525252;
   font-size: 8px;
 }
-.photographer__info-labels {
+.photographer__footer {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+.photographer__footer a {
+  text-decoration: none;
 }
 
 @media screen and (max-width: 580px) {
