--- a/sass/components/photographer.scss
+++ b/sass/components/photographer.scss
@@ -1,49 +1,55 @@
 @import "../utils/variables";
 
-.photographer {
-  /* background: chocolate; */
+
+.photographer{
   width: 28vw;
   margin: 5px;
-  .link {
-    text-decoration: none;
-  }
-  &__img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    img {
+  &__header{
+    text-align: center;
+    a{
+      text-decoration: none;
+    }
+    img{
       width: auto;
       height: 120px;
       border-radius: 50%;
       border: 1px solid black;
     }
-  }
-  &__info {
- /*    background-color: rebeccapurple; */
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    align-items: center;
-    &-name {
-    /*   background-color: red; */
+    h2{
       font-size: 25px;
       color: $secondary;
     }
-    &-country {
+  }
+  &__main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 50px;
+    .location{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
       font-size: 12px;
       color: $primary;
+      &__city{
+        margin-right: 5px;
+      }
     }
-    &-tagline {
+    .tagline{
       font-size: 10px;
     }
-    &-price {
+    .price{
       color: $tertiary;
       font-size: 8px;
     }
-    &-labels {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
+  }
+  &__footer{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    a{
+      text-decoration: none;
     }
   }
 }
