--- a/sass/components/photographer.scss
+++ b/sass/components/photographer.scss
@@ -10,10 +10,10 @@
       text-decoration: none;
     }
     img{
-      width: auto;
+      width: 120px;
       height: 120px;
       border-radius: 50%;
-      border: 1px solid black;
+      object-fit: cover;
     }
     h2{
       font-size: 25px;
