--- a/sass/components/photographer-banner.scss
+++ b/sass/components/photographer-banner.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     background: rgb(250, 250, 250);
     padding: 30px;
+    margin-bottom: 5px;
     &__info{
         /* background-color: blue; */
         min-height: 120px;
