--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -20,7 +20,8 @@
 }
 .btnStickyTop {
   //TODO - JS: display when scroll 
-  display: block;
+  display: none;
+ /*  display: block; */
   position: sticky;
   top :0;
   button{
