--- a/sass/components/modal.scss
+++ b/sass/components/modal.scss
@@ -83,7 +83,7 @@
             object-fit: cover;
           }
           .carouselPictures__item{
-            /* display: none; */
+            display: none;
           }
           .active{
             display:  block;
