--- a/sass/components/picture.scss
+++ b/sass/components/picture.scss
@@ -1,34 +1,34 @@
 @import "../utils/variables";
 
 .picture {
-  &__img {
+  width: 28vw;
+  min-width: 280px;
+  img {
     cursor: pointer;
-    img {
-      width: 28vw;
-      height: 400px;
-      object-fit: cover;
-      border-radius: 4px;
-    }
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 4px;
   }
-  &__info{
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: $primary;
+    &-info {
+      margin: 10px 0;
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      color: $primary;
-      &-info{
-        margin: 10px 0;
-          display: flex;
-          justify-content: space-between;
-      }
+    }
   }
 }
 @media screen and (max-width: $breakPointMobile) {
-  .picture{
+  .picture {
     margin: 0 15px;
-    &__img{
+    &__img {
       width: 100%;
       max-height: 250px;
-      img{
+      img {
         width: 100%;
         max-height: 250px;
       }
