--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 @import "./components/topbar.scss";
 @import "./components/photographer.scss";
 @import "./components/photographer-banner.scss";
-@import "./components/picture.scss";
+@import "./components/media.scss";
 @import "./components/modal.scss";
 /* Pages */
 @import "./pages/photographers.scss";
