--- a/css/style.css
+++ b/css/style.css
@@ -127,23 +127,12 @@
   margin: 3px;
   cursor: pointer;
 }
-.btnLabel a {
-  text-decoration: none;
-  color: #901c1c;
-  background: none;
-}
 .btnLabel:hover {
   background: #901c1c;
   color: white;
 }
-.btnLabel:hover a {
-  color: white;
-}
 .btnLabel:focus {
   background: #901c1c;
-  color: white;
-}
-.btnLabel:focus a {
   color: white;
 }
 
@@ -186,6 +175,11 @@
 }
 .dropDown__btn:hover .dropDown__btn-content {
   display: block;
+}
+
+.btnCloseModal {
+  background: none;
+  border: none;
 }
 
 /* COLORS */
@@ -388,38 +382,40 @@
 /* BTN */
 /* BTN LABEL */
 /* BREAKPOINT */
-.picture {
+.media {
   width: 28vw;
   min-width: 280px;
 }
-.picture img {
+.media img {
   cursor: pointer;
   width: 100%;
   height: 400px;
   object-fit: cover;
   border-radius: 4px;
 }
-.picture__info {
+.media__info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #901c1c;
 }
-.picture__info-info {
+.media__info-info {
   margin: 10px 0;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  background-color: aqua;
 }
 
 @media screen and (max-width: 580px) {
-  .picture {
+  .media {
     margin: 0 15px;
   }
-  .picture__img {
+  .media__img {
     width: 100%;
     max-height: 250px;
   }
-  .picture__img img {
+  .media__img img {
     width: 100%;
     max-height: 250px;
   }
@@ -459,7 +455,7 @@
 .bgGround .modal .contact {
   color: white;
 }
-.bgGround .modal .pictures {
+.bgGround .modal .medias {
   color: #901c1c;
 }
 .bgGround .modal__content-form {
@@ -488,35 +484,35 @@
 .bgGround .modal__content-form .formContact__btn button {
   padding: 14px 18px;
 }
-.bgGround .modal__content-picture {
+.bgGround .modal__content-media {
   padding: 20px;
   background: white;
 }
-.bgGround .modal__content-picture .carouselPictures {
+.bgGround .modal__content-media .carouselMedias {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.bgGround .modal__content-picture .carouselPictures__chevron {
+.bgGround .modal__content-media .carouselMedias__chevron {
   color: #901c1c;
   font-size: 25px;
   cursor: pointer;
   margin: 20px;
 }
-.bgGround .modal__content-picture .carouselPictures__pictures img {
+.bgGround .modal__content-media .carouselMedias__medias img {
   min-width: 200px;
   width: 30vw;
   height: 300px;
   object-fit: cover;
 }
-.bgGround .modal__content-picture .carouselPictures__pictures .carouselPictures__item {
+.bgGround .modal__content-media .carouselMedias__medias .carouselMedias__item {
   display: none;
 }
-.bgGround .modal__content-picture .carouselPictures__pictures .active {
+.bgGround .modal__content-media .carouselMedias__medias .active {
   display: block;
   animation: fade 0.8s;
 }
-.bgGround .modal__content-picture .carouselPictures__name {
+.bgGround .modal__content-media .carouselMedias__name {
   color: #901c1c;
   font-size: 12px;
   margin: 2px 0 2px 0;
