--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -38,22 +38,11 @@
   font-size: 10px;
   margin: 3px;
   cursor: pointer;
-  a {
-    text-decoration: none;
-    color: $primary;
-    background: none;
-  }
   &:hover {
-    a {
-      color: white;
-    }
     background: $primary;
     color: white;
   }
   &:focus {
-    a {
-      color: white;
-    }
     background: $primary;
     color: white;
   }
@@ -103,5 +92,7 @@
     }
   }
 }
-
-
+.btnCloseModal{
+  background: none;
+  border: none;
+}
