--- a/sass/components/media.scss
+++ b/sass/components/media.scss
@@ -3,7 +3,15 @@
 .media {
   width: 28vw;
   min-width: 280px;
+  color: $primary;
   img {
+    cursor: pointer;
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+  video {
     cursor: pointer;
     width: 100%;
     height: 400px;
@@ -14,13 +22,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: $primary;
     &-info {
       margin: 10px 0;
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      background-color: aqua;
     }
   }
 }
