--- a/sass/pages/photgrapher.scss
+++ b/sass/pages/photgrapher.scss
@@ -19,7 +19,9 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: space-between;
+    
+    justify-content: space-evenly;
+    /* justify-content: space-between; */
   }
 }
 .stickyBanner {
