--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,4 +10,5 @@ $borderRadiusBtn: 4px;
 /* BTN LABEL */
 $borderRadiusBtnLabel: 20px;
 /* BREAKPOINT */
-$breakPointMobile: 580px;
+$breakPointMobile: 680px;
+$breakPointTablette: 1000px;
