--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@
   padding: 2rem;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -136,61 +140,75 @@
   color: white;
 }
 
-.dropDown {
-  position: relative;
-}
-.dropDown__btn {
-  position: absolute;
-  top: -18px;
-  background: #901c1c;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  font-weight: 600;
-  cursor: pointer;
-  font-size: 12px;
-  /*   &:hover {
-      .fa-chevron-up {
-        display: block;
-      }
-      .fa-chevron-down {
-        display: none;
-      }
-    } */
-}
-.dropDown__btn .fa-chevron-up {
-  display: none;
-}
-.dropDown__btn:focus .fa-chevron-up {
-  display: block;
-}
-.dropDown__btn:focus .fa-chevron-down {
-  display: none;
-}
-.dropDown__btn-main {
-  display: flex;
-  padding: 14px 12px;
-}
-.dropDown__btn-content {
-  display: none;
-  padding: 5px;
-}
-.dropDown__btn-content .item {
-  padding: 14px 12px;
-  text-align: left;
-  border-top: 1px solid white;
-  cursor: pointer;
-}
-.dropDown__btn:active .dropDown__btn-content {
-  display: block;
-}
-.dropDown__btn:focus .dropDown__btn-content {
-  display: block;
-}
-
 .btnCloseModal {
   background: none;
   border: none;
+}
+
+.btnDrop {
+  background: #901c1c;
+  color: white;
+  border: none;
+  padding: 14px 12px;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: 12px;
+}
+.btnDrop:hover {
+  background: #D3573C;
+  color: black;
+  border-radius: 0;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.btnDrop:focus {
+  background: #D3573C;
+  color: black;
+}
+
+.drop .pop {
+  display: flex;
+}
+.drop .pop .fa-chevron-up {
+  display: none;
+}
+.drop .pop:hover .fa-chevron-down {
+  display: none;
+}
+.drop .pop:hover .fa-chevron-up {
+  display: block;
+}
+.drop .pop:focus .fa-chevron-down {
+  display: none;
+}
+.drop .pop:focus .fa-chevron-up {
+  display: block;
+}
+.drop .pop:focus .drop__content {
+  display: block;
+}
+.drop:hover .drop__content {
+  display: block;
+}
+.drop:focus .drop__content {
+  display: block;
+}
+.drop .drop__content {
+  display: none;
+}
+.drop .drop__content-btn {
+  display: flex;
+  flex-direction: column;
+}
+
+.pop:hover {
+  border-radius: 0;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.pop:hover .name {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 /* COLORS */
@@ -225,7 +243,7 @@
   font-size: 14px;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 680px) {
   .topBar {
     padding: 0 10px;
   }
@@ -306,7 +324,7 @@
   display: none;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 680px) {
   .photographer {
     margin: 15px;
     width: 100%;
@@ -363,7 +381,7 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 680px) {
   .photographerBanner {
     background: none;
   }
@@ -395,22 +413,20 @@
 /* BTN LABEL */
 /* BREAKPOINT */
 .media {
-  width: 28vw;
-  min-width: 280px;
   color: #901c1c;
 }
 .media img {
   cursor: pointer;
   width: 100%;
-  height: 400px;
+  height: 600px;
   object-fit: cover;
   border-radius: 4px;
 }
 .media video {
   cursor: pointer;
   width: 100%;
-  height: 400px;
   object-fit: cover;
+  height: 600px;
   border-radius: 4px;
 }
 .media__info {
@@ -424,7 +440,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 680px) {
   .media {
     margin: 0 15px;
   }
@@ -457,8 +473,8 @@
   z-index: 6;
   border-radius: 4px;
   min-width: 300px;
-  width: 60vw;
-  max-width: 500px;
+  /*  width: 60vw; */
+  /* max-width: 500px; */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -521,13 +537,13 @@
 }
 .bgGround .modal__content-media .carouselMedias__medias img {
   min-width: 200px;
-  width: 100%;
+  width: 350px;
   height: 500px;
   object-fit: cover;
 }
 .bgGround .modal__content-media .carouselMedias__medias video {
   min-width: 200px;
-  width: 100%;
+  width: 350px;
   height: 500px;
   object-fit: cover;
 }
@@ -573,7 +589,6 @@
 /* BREAKPOINT */
 .containerPhotographerSelected {
   padding: 0 40px;
-  min-height: 94vh;
 }
 .containerPhotographerSelected__brand {
   margin: 10px 0;
@@ -587,12 +602,9 @@
   align-items: center;
 }
 .containerPhotographerSelected__medias {
-  padding: 10px 0;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  /* justify-content: space-between; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px;
 }
 
 .stickyBanner {
@@ -626,12 +638,12 @@
   padding: 5px 14px;
 }
 
-@media screen and (min-width: 580px) {
+@media screen and (min-width: 680px) {
   .stickyBtn {
     display: none;
   }
 }
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 680px) {
   .containerPhotographerSelected {
     padding: 0;
   }
@@ -639,7 +651,9 @@
     margin: 30px 0px 0px 30px;
   }
   .containerPhotographerSelected__medias {
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 40px;
   }
   .containerPhotographerSelected__sort {
     display: none;
@@ -652,6 +666,13 @@
 
   .stickyBanner {
     display: none;
+  }
+}
+@media (min-width: 680px) and (max-width: 1000px) {
+  .containerPhotographerSelected__medias {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 40px;
   }
 }
 body {
