--- a/sass/pages/photgrapher.scss
+++ b/sass/pages/photgrapher.scss
@@ -2,7 +2,7 @@
 
 .containerPhotographerSelected {
   padding: 0 40px;
-  min-height: 94vh;
+
   &__brand {
     margin: 10px 0;
     img{
@@ -15,13 +15,9 @@
     align-items: center;
   }
   &__medias {
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    
-    justify-content: space-evenly;
-    /* justify-content: space-between; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
   }
 }
 .stickyBanner {
@@ -58,6 +54,8 @@
         display: none;
     }
 }
+
+
 @media screen and (max-width: $breakPointMobile) {
   .containerPhotographerSelected {
     padding: 0;
@@ -65,7 +63,9 @@
       margin: 30px 0px 0px 30px;
     }
     &__medias{
-      justify-content: center;
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 40px;
     }
     &__sort {
       display: none;
@@ -78,5 +78,15 @@
   }
   .stickyBanner {
     display: none;
+  }
+}
+
+@media  (min-width: $breakPointMobile) and (max-width : $breakPointTablette){
+  .containerPhotographerSelected {
+    &__medias{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 40px;
+    }
   }
 }
